# trading_results

./: .env  .gitignore  .test.env  alembic.ini  database.py  pyproject.toml
migrations/: env.py
migrations/versions/: 01_2024_08_06_86bde1878910_initial_revision.py  86bde1878910_initial_revision.py
src/: main.py
src/api/routers/trade/: handle.py  trade.py
src/databases/: database.py
src/models/: base.py  models.py  trade.py
src/operations/: router.py
src/repositories/: spimex.py
src/schemas/: schemas.py  wrapper.py
src/services/: trading_results_service.py
src/utils/: __main__.py  cache_manager.py  config.py  main.py  metadata.py  repository.py  unit_of_work.py
tests/: conftest.py
tests/api/routers/trade/: conftest.py  test_traid.py
tests/utils/: conftest.py  test_unit_unit_of_work.py
